All_Component_DX/force-app/main/default/objects/Stock_Adjustment__c/Stock_Adjustment__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object captures &quot;hard-reset&quot; adjustments to ServiceMax stock data. This is used by ServiceMax application administrators when a mismatch is found between real stock and ServiceMax stock.</description>
    <label>Stock Adjustment</label>
    <nameField>
        <displayFormat>SADJ-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>