All_Component_DX/force-app/main/default/objects/Stock_Adjustment__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <description>Type of adjustment. Indicates the purpose for stock adjustment</description>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Physical Inventory</fullName>
            </value>
            <value>
                <fullName>Scrap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>