All_Component_DX/force-app/main/default/objects/Stock_Adjustment__c/fields/Change_Quantity2__c.field-meta.xml
<CustomField>
    <fullName>Change_Quantity2__c</fullName>
    <description>Positive number indicating the change in quantity (Higher quantity – lower quantity)</description>
    <formula>IF( New_Quantity2__c  &gt;  Old_Quantity2__c , New_Quantity2__c   -   Old_Quantity2__c ,  Old_Quantity2__c  -  New_Quantity2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Positive number indicating the change in quantity (Higher quantity – lower quantity)</inlineHelpText>
    <label>Change Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>