All_Component_DX/force-app/main/default/objects/Stock_Adjustment__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description>Indicates if the change was an increase or decrease</description>
    <formula>IF( New_Quantity2__c  &gt;  Old_Quantity2__c  , &quot;Increase&quot;,  IF( Old_Quantity2__c &gt;  New_Quantity2__c  , &quot;Decrease&quot;, &quot;&quot;) )</formula>
    <inlineHelpText>Indicates if the change was an increase or decrease</inlineHelpText>
    <label>Change Type</label>
    <type>Text</type>
</CustomField>