All_Component_DX/force-app/main/default/objects/Stock_Adjustment__c/fields/IsPartner__c.field-meta.xml
<CustomField>
    <fullName>IsPartner__c</fullName>
    <description>Flag indicates if transaction is for/ by a Partner or not.</description>
    <formula>IF(  IsPartnerRecord__c  ,&quot;True&quot;, &quot;False&quot;)</formula>
    <inlineHelpText>Flag indicates if transaction is for/ by a Partner or not.</inlineHelpText>
    <label>Is Partner</label>
    <type>Text</type>
</CustomField>