All_Component_DX/force-app/main/default/objects/Stock_Adjustment__c/fields/IsPartnerRecord__c.field-meta.xml
<CustomField>
    <fullName>IsPartnerRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if transaction is for/ by a Partner or not.</description>
    <inlineHelpText>Flag indicates if transaction is for/ by a Partner or not.</inlineHelpText>
    <label>IsPartnerRecord</label>
    <type>Checkbox</type>
</CustomField>