All_Component_DX/force-app/main/default/objects/Stock_Adjustment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Physical location of the product where stock is adjusted. This is a lookup to an existing site record.</description>
    <inlineHelpText>Physical location of the product where stock is adjusted. This is a lookup to an existing site record.</inlineHelpText>
    <label>Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>Stock_Adjustment</relationshipName>
    <type>Lookup</type>
</CustomField>