All_Component_DX/force-app/main/default/objects/Stock_Adjustment__c/fields/New_Quantity2__c.field-meta.xml
<CustomField>
    <fullName>New_Quantity2__c</fullName>
    <description>Product quantity after stock adjustment.</description>
    <inlineHelpText>Product quantity after stock adjustment.</inlineHelpText>
    <label>New Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>