All_Component_DX/force-app/main/default/objects/Stock_Adjustment__c/fields/SM_Batch_Lot__c.field-meta.xml
<CustomField>
    <fullName>SM_Batch_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identification number assigned to a particular quantity or lot of material from a single manufacturer.</description>
    <inlineHelpText>Identification number assigned to a particular quantity or lot of material from a single manufacturer.</inlineHelpText>
    <label>Batch/Lot</label>
    <referenceTo>Batch_Lot_Master__c</referenceTo>
    <relationshipLabel>Stock Adjustments</relationshipLabel>
    <relationshipName>Stock_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>