All_Component_DX/force-app/main/default/objects/Stock_Adjustment__c/validationRules/SVMXC_ValidateAdjustmentQuantityChange.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC_ValidateAdjustmentQuantityChange</fullName>
    <active>true</active>
    <description>Adjustment quantity cannot be changed.</description>
    <errorConditionFormula>AND(!ISNEW(),  ISCHANGED(New_Quantity2__c))</errorConditionFormula>
    <errorDisplayField>New_Quantity2__c</errorDisplayField>
    <errorMessage>Once saved, adjustment quantity cannot be modified.</errorMessage>
</ValidationRule>