All_Component_DX/force-app/main/default/objects/Stock_Adjustment__c/listViews/All_Stock_Adjustments.listView-meta.xml
<ListView>
    <fullName>All_Stock_Adjustments</fullName>
    <columns>NAME</columns>
    <columns>Adjustment_Type__c</columns>
    <columns>Product__c</columns>
    <columns>Change_Quantity2__c</columns>
    <columns>Posted_To_Inventory__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Stock Adjustments</label>
    <language>en_US</language>
</ListView>